// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`countries reducer should handle FETCH_COUNTRIES_SUCCESS 1`] = `
Object {
  "ids": undefined,
  "isFetching": false,
}
`;

exports[`countries reducer should return the initial state 1`] = `
Object {
  "error": null,
  "ids": Array [],
  "isFetching": false,
}
`;
